force-app/main/default/objects/Genesys_CTI_Event__e/Genesys_CTI_Event__e.object-meta.xml
<CustomObject>
    <label>Genesys CTI Event</label>
    <pluralLabel>Genesys CTI Events</pluralLabel>
</CustomObject>