force-app/main/default/objects/Genesys_CTI_Event__e/fields/Attached_Data__c.field-meta.xml
<CustomField>
    <fullName>Attached_Data__c</fullName>
    <description>để lưu toàn bộ message.attachdata dưới dạng chuỗi JSON</description>
    <label>Attached Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>