force-app/main/default/objects/Genesys_CTI_Event__e/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>