force-app/main/default/objects/Genesys_CTI_Event__e/fields/Caller_Phone_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Caller_Phone_Number_c__c</fullName>
    <description>để lưu PhoneNo hoặc ANI</description>
    <label>Caller Phone Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>