force-app/main/default/objects/Genesys_CTI_Event__e/fields/Genesys_Call_UUID__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Call_UUID__c</fullName>
    <label>Genesys Call UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>