force-app/main/default/objects/Genesys_CTI_Event__e/fields/Nationa_ID__c.field-meta.xml
<CustomField>
    <fullName>Nationa_ID__c</fullName>
    <description>để lưu CustNationalID</description>
    <label>Nationa ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>